--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     <h1>Sistema de cadastro de jogos</h1>
+    
     <script src="app.js"></script>
+    
+    <ul>
+        <li> Vagrant: Gerenciando vms</li>
+        <li> Docker: Criando containers</li>
+        <li> Ansible: Sua infraestrutura como código</li>
+        <li> Kubernetes: Orquestração de containers</li>
+        <li> Integração continua: Maturidade e produtividade no desenvolvimento de software</li>
+    </ul>
 </body>
 </html>
