--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus jogos</title>
+    <title>Lista de Cursos</title>
 </head>
 <body>
-    <h2>Sistema de cadastro de jogos</h2>
-
-    <script src="app.js"></script>
+    <h2>Cursos de Devops</h2>        
     
     <dl>
         <dt>Vagrant</dt>
