Adicionado nova lista de cursos cloud

--- a/index.html
+++ b/index.html
@@ -25,5 +25,22 @@
         <dt>Integração continua</dt>
         <dd>Maturidade e produtividade no desenvolvimento de software</dd>
     </dl>
+
+    <h2>Cursos de Cloud</h2>        
+    
+    <dl>
+        <dt>Amazon EC2</dt>
+        <dd>BLOLBOBLOALBOBLABOLBOL</dd>
+
+        <dt>Amazon S3</dt>
+        <dd>TFETETETETETT</dd>
+
+        <dt>GCP</dt>
+        <dd>DASFGAASDASGFASD</dd>
+
+        <dt>Azure</dt>
+        <dd>GGEGEGEG</dd>
+
+    </dl>
 </body>
 </html>
