Adicionando novos cursos cloud

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
         <dt>Azure</dt>
         <dd>GGEGEGEG</dd>
 
+        <dt>Amazon Elastic</dt>
+        <dd>GGEGEGEG</dd>
+
+        <dt>Amazon ECS</dt>
+        <dd>GGEGEGEG</dd>
+
     </dl>
 </body>
 </html>
