--- a/index.html
+++ b/index.html
@@ -25,5 +25,15 @@
         <dt>Integração continua</dt>
         <dd>Maturidade e produtividade no desenvolvimento de software</dd>
     </dl>
+
+    <h2>Cursos de Linux</h2>        
+    
+    <dl>
+        <dt>Linux I:</dt>
+        <dd>conhecendo e utilizando o terminal</dd>
+
+        <dt>Linux II:</dt>
+        <dd>programas, processos e pacotes</dd>
+    </dl>
 </body>
 </html>
