--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 
         <dt>Linux II:</dt>
         <dd>programas, processos e pacotes</dd>
+
+        <dt>Shell Scripting parte 1:</dt>
+        <dd>scripts de automação de tarefas</dd>
     </dl>
 
     <h2>Cursos de Cloud</h2>            
